--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Aierse" />
+    <meta name="google-adsense-account" content="ca-pub-2653894811777572" />
     <title>&lt;Aierse /&gt;</title>
   </head>
   <body>
